2 processors